--- a/style.CSS
+++ b/style.CSS
@@ -1,8 +1,8 @@
 body {
     text-align: center;
-    background: linear-gradient (#ed5f5c 0%, #5c6bed 100%);
+    background: linear-gradient(#ed5f5c 0%, #5c6bed 100%);
     background-repeat: no-repeat;
-    background: rgb(107, 180, 58);
+    
     background: linear-gradient(90deg, rgba(107, 180, 58, 1) 0%, rgba(182, 218, 247, 1) 19%, rgba(255, 68, 54, 1) 77%, rgba(252, 176, 69, 1) 100%);
 }
 
@@ -51,9 +51,12 @@ p {
 
 }
 
-.links;
-
-hover {
+.links:hover {
     background-color: blue;
 
+}
+#name{
+    line-height: 1.3;
+    font-size: 40px;
+    font-weight: 300;
 }
