--- a/style.CSS
+++ b/style.CSS
@@ -2,8 +2,8 @@ body {
     text-align: center;
     background: linear-gradient(#ed5f5c 0%, #5c6bed 100%);
     background-repeat: no-repeat;
-    
     background: linear-gradient(90deg, rgba(107, 180, 58, 1) 0%, rgba(182, 218, 247, 1) 19%, rgba(255, 68, 54, 1) 77%, rgba(252, 176, 69, 1) 100%);
+
 }
 
 img {
@@ -55,33 +55,35 @@ p {
     background-color: blue;
 
 }
-#name{
+
+#name {
     line-height: 1.3;
     font-size: 40px;
     font-weight: 300;
 }
 
-a{
+a {
     text-decoration: none;
-    
+
 }
 
 .article:hover {
     color: aquamarine;
-    
+
 }
 
-html{
+html {
     scroll-behavior: smooth;
-    
+
 }
 
-#dance{
+#dance {
     width: 100%;
-    height:800px;
-    background-color:brown;
+    height: 800px;
+    background-color: brown;
 }
-#my-work{
+
+#my-work {
     width: 100%;
     height: 800px;
     background-color: blue
@@ -89,17 +91,24 @@ html{
 
 #inspo {
     width: 100px;
-    height:800px;
+    height: 800px;
     background-color: darkcyan;
 }
 
-img{
-    transition:transform 0.2s;
-    
-    
+img {
+    transition: transform 0.2s;
+
+
 }
 
-img:hover{
-    transform:scale(0.9);
+img:hover {
+    transform: scale(0.9);
 }
 
+#MJ {
+    height: 600px;
+    width: 600px;
+    border-radius: 50%;
+    margin-left: 600;
+
+}
